test/expected/explain_f_k-knr.out
explain struct S f()
        ^
9: error: functions returning struct are not supported until C89
